--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.6.7"
+    "@vitejs/plugin-vue": "^2.0.0",
+    "vite": "^2.7.2"
   },
   "dependencies": {
     "ol": "latest",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vue": "^3.2.25"
   }
 }
