--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ol": "latest",
     "typescript": "^4.5.4",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue3-openlayers": "^0.1.55"
   }
 }
