--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "ol": "latest",
+    "pinia": "^2.0.9",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25",
     "vue3-openlayers": "^0.1.55"
   }
