--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "jest": "^27.4.7",
     "vite": "^2.7.2"
   },
   "dependencies": {
