--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
-    "@vitejs/plugin-vue": "^2.0.0",
+    "@vitejs/plugin-vue": "^2.1.0",
     "jest": "^27.4.7",
-    "vite": "^2.7.2"
+    "vite": "^2.7.13"
   },
   "dependencies": {
-    "ol": "latest",
+    "balm-ui": "^9.40.3",
     "pinia": "^2.0.9",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
-    "vue": "^3.2.25",
-    "vue3-openlayers": "^0.1.55"
+    "vue": "^3.2.29",
+    "vue3-openlayers": "^0.1.56"
   }
 }
